Closed Bug 149036 Opened 23 years ago Closed 23 years ago

Javascript windows zoom button is not enabled. Window has no minimum bounds

Categories

(Core Graveyard :: Embedding: Mac, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0.1

People

(Reporter: moconnell, Assigned: ccarlen)

Details

(Keywords: topembed)

Attachments

(1 file, 1 obsolete file)

When CWindowCreator creates a new chrome window, the window is created with an inactive zoom button. Also, the window has no minimum bounds. As a result the window can be resized to nothing.
Taking.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → mozilla1.0.1
This implements zooming as PowerPlant intends it to work. When zooming out, the window is placed with the minimum amount of repositioning required to make the whole window fit onscreen. I guess they really wish to enforce this convention because you can set a standard *dimension* of an LWindow not a *rect* Need r=
Attached patch patch v2Splinter Review
Updated patch uses the bounds of the gray rgn to determine the max size rather than the size of the zoomed out (standard) rect.
Attachment #86260 - Attachment is obsolete: true
Missed something: The 1st occurance of + minMaxBounds.left = kMinimumWindowDimension.width; + minMaxBounds.top = kMinimumWindowDimension.height; needs to be removed. With that, Patrick, can you sr=?
Simon, since Patrick is away, can you sr= this?
Comment on attachment 86272 [details] [diff] [review] patch v2 sr=sfraser
Attachment #86272 - Flags: superreview+
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
To Dharma for verification
QA Contact: mdunn → dsirnapalli
-- Verified in trunk current build(20021017). When i create a new window it is created with an active zoom button. the window also has minimum bounds.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: