Bug 149036 - Zoom button is not enabled, No min/max size contraints on resizing windows. r=pink/sr=sfraser